namespaces/apps/nodey460/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  labels:
    chart: nodey460-1.0.29
  name: nodey460
  namespace: myapps
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodey460-nodey460
  type: ClusterIP
